categorise by complexity and refurmat

--- a/CodeWars.UnitTests/CodeWars.UnitTests.csproj
+++ b/CodeWars.UnitTests/CodeWars.UnitTests.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\CodeWars\CodeWars.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="5kyu\" />
+  </ItemGroup>
+
 </Project>
